LTiSource/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    application: oauth2-proxy
  name: oauth2-proxy-svc
  namespace: default
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    application: oauth2-proxy
