LTiSource/oauth2-auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: oauth2-auth-policy
spec:
  action: CUSTOM
  provider:
    name: "oauth2-proxy"
  rules:
  - to:
    - operation:
        hosts:
        - "ltiadmin.dev"
        # Uncomment if authorization requried base on path match
        # paths: ["/api"]
  selector:
    matchLabels:
      ltiauth: UseOAuth2
